@@ -175,15 +175,7 @@ body {
 
 	h1 {
 		height:26px;
-
-		background: #ececec; /* Old browsers */
-		background: -moz-linear-gradient(top, #ececec 0%, #cecece 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ececec), color-stop(100%,#cecece)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top, #ececec 0%,#cecece 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top, #ececec 0%,#cecece 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top, #ececec 0%,#cecece 100%); /* IE10+ */
-		background: linear-gradient(to bottom, #ececec 0%,#cecece 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ececec', endColorstr='#cecece',GradientType=0 ); /* IE6-9 */
+		@include gradient-header;
 		border: {
 			radius:5px 5px 0 0;
 			top:1px solid $colorNeutral02;
