@@ -94,14 +94,7 @@
 			width:60px; }
 
 		.ranges {
-			background:#ffffff; /* Old browsers */
-			background:-moz-linear-gradient(top, #ffffff 0%, #e0e0e0 100%); /* FF3.6+ */
-			background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e0e0e0)); /* Chrome,Safari4+ */
-			background:-webkit-linear-gradient(top, #ffffff 0%,#e0e0e0 100%); /* Chrome10+,Safari5.1+ */
-			background:-o-linear-gradient(top, #ffffff 0%,#e0e0e0 100%); /* Opera 11.10+ */
-			background:-ms-linear-gradient(top, #ffffff 0%,#e0e0e0 100%); /* IE10+ */
-			background:linear-gradient(to bottom, #ffffff 0%,#e0e0e0 100%); /* W3C */
-			filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e0e0e0',GradientType=0 ); /* IE6-9 */
+			@include gradient-button;
 			border-radius:13px;
 			border:1px solid $colorNeutral04;
 			cursor:pointer;
